--- a/templates/phishing_examples.html
+++ b/templates/phishing_examples.html
@@ -48,6 +48,15 @@
         financial losses, with the average cost of such an attack estimated at
         $4.5 million.
       </p>
+      <p>
+        During the Global IT outage that occurred on July 19, 2024 because of a
+        U.S cybersecurity company, CrowdStrike pushing a faulty software update
+        on Microsoft systems and applications, phishing attacks were
+        rudimentary. Attackers posing as CrowdStrike and Microsoft support sent
+        messages claiming to solve IT issues, accompanied by malicious links.
+        Clicking these links could lead to data theft. Therefore, it's crucial
+        to avoid clicking on such suspicious links.
+      </p>
     </div>
   </body>
 </html>
